<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>gaalop</artifactId>
        <groupId>de.gaalop</groupId>
        <version>1.0.0</version>
    </parent>
   
    <name>Gaalop TBA Plugin</name>
    <modelVersion>4.0.0</modelVersion>
    <artifactId>tba</artifactId>
    <build>
        <plugins>
            <plugin>
                <groupId>org.antlr</groupId>
                <artifactId>antlr4-maven-plugin</artifactId>
                <version>4.9.2</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>antlr4</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <libDirectory>target/generated-sources/antlr/de/gaalop/tba/cfgImport/optimization/maxima/parser</libDirectory>
                    <listener>false</listener>
                    <visitor>true</visitor>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.0</version>
                <configuration>
                    <source>16</source>
                    <target>16</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <dependencies>
        <dependency>
            <groupId>org.antlr</groupId>
            <artifactId>antlr4-runtime</artifactId>
            <version>4.9.3</version>
            <type>jar</type>
            <exclusions>
                <exclusion>
                    <groupId>org.antlr</groupId>
                    <artifactId>antlr4-annotations</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.antlr</groupId>
            <artifactId>antlr4-annotations</artifactId>
            <version>4.3</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>de.gaalop</groupId>
            <artifactId>api</artifactId>
            <version>1.0.0</version>
        </dependency>
        <dependency>
            <groupId>de.gaalop</groupId>
            <artifactId>clucalc</artifactId>
            <version>1.0.0</version>
        </dependency>
        <dependency>
            <groupId>de.gaalop</groupId>
            <artifactId>algebra</artifactId>
            <version>1.0.0</version>
        </dependency>
    </dependencies>
    <description>-Xmx5g</description>
</project>